# comp_graphics

./: .gitignore  CMakeLists.txt  README.md
Task1/: CMakeLists.txt  gl_manager.hpp  main.cpp
Task1/shaders/: fragment_shader1.glsl
Task1/win64/: fragment_shader1.glsl
Task2/: CMakeLists.txt  gl_manager.hpp  main.cpp
Task2/shaders/: fragment_shader1.glsl  vertex_shader.glsl
Task3/: CMakeLists.txt  main.cpp  vertex_buffer_data.hpp
Task3/win64/: vertex_shader.glsl
Task4/: CMakeLists.txt  bone.hpp  doggo.hpp  game_manager.hpp  main.cpp  text_manager.hpp
Task4/shaders/: FragmentStandardShading.glsl  StandardShading.fragmentshader  StandardShading.vertexshader  TextVertexShader.fragmentshader  TextVertexShader.vertexshader
Task5/: CMakeLists.txt  bone.hpp  default_object.hpp  doggo.hpp  game_manager.hpp  ground.hpp  heart.hpp  light.hpp  main.cpp  sky.hpp  text_manager.hpp
support/: controls.cpp  controls.hpp  gl_manager.cpp  gl_manager.hpp  objloader.cpp  objloader.hpp  shader.cpp  shader.hpp  shader_loader.cpp  shader_loader.hpp  text2D.cpp  text2D.hpp  texture_loader.cpp  texture_loader.hpp
